welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: Missing closing brace `}' assumed here
nbpas=0
^Methods:3: error: expected class or object definition
dejafait=0
^Methods:4: error: expected class or object definition
def goAndGet() {
^